--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,8 @@
         {
             "type": "chrome",
             "request": "launch",
-            "name": "Open index.html",
-            "file": "./index.html"
+            "name": "Open home.html",
+            "file": "./home.html"
         }
     ]
 }
