--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,10 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            // "type": "chrome",
+            // "request": "launch",
+            // "name": "Open home.html",
+            // "file": "./home.html"
+            "runtimeExecutable": "C:\\Program Files\\nodejs\\node.exe",
+            "type": "node",
             "request": "launch",
-            "name": "Open home.html",
-            "file": "./home.html"
+            "name": "Launch Air Hockey Server",
+            "program": "./server.js",
+            "skipFiles": ["<node_internals>/**"]
         }
     ]
 }
